--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ rvm:
   - 1.8.7
   - 1.9.3
 before_install:
+  - rvm -v
   - gem install rubygems-update --version=1.6.2
   - gem update --system 1.6.2
   - gem install rake --version=0.9.2.2
