--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ rvm:
   - 1.9.3
 before_install:
   - rvm -v
-  - gem install rubygems-update --version=1.6.2
   - gem update --system 1.6.2
+  - gem --version
   - gem install rake --version=0.9.2.2
   - git submodule update --init --recursive
   - psql -c "create database foi_test template template0 encoding 'SQL_ASCII';" -U postgres
