--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,8 @@ rvm:
   - 1.8.7
   - 1.9.3
 before_install:
-  - rvm get latest
   - rvm -v
-  - gem update --system 1.6.2
+  - rvm rubygems 1.6.2
   - gem --version
   - gem install rake --version=0.9.2.2
   - git submodule update --init --recursive
