--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ rvm:
   - 1.9.3
 before_install:
   - rvm -v
-  - rvm rubygems 1.6.2
+  - gem update --system 1.8.0
+  - gem update --system 1.6.2
   - gem --version
   - gem install rake --version=0.9.2.2
   - git submodule update --init --recursive
