--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ rvm:
 before_install:
   - rvm -v
   - gem update --system 1.8.10
+  - gem update --system 1.8.5
   - gem update --system 1.6.2
   - gem --version
   - gem install rake --version=0.9.2.2
